# mgba

./: .gitignore  CMakeLists.txt  README.md  fb  fb.c  toolChain.cmake
MPlayer-1.4/: av_helpers.d  codec-cfg  config.h  config.mak  version.h
MPlayer-1.4/ffmpeg/: config.asm
MPlayer-1.4/ffmpeg/libavcodec/: 012v.d  4xm.d  8bps.d  8svx.d  a64multienc.d  aac_ac3_parser.d  aac_adtstoasc_bsf.d  aac_parser.d  aaccoder.d  aacdec.d  aacdec_fixed.d  aacenc.d  aacenc_is.d  aacenc_ltp.d  aacenc_pred.d  aacenc_tns.d  aacenctab.d  aacps_fixed.d  aacps_float.d  aacpsy.d  aacsbr.d  aacsbr_fixed.d  aactab.d  aasc.d  ac3.d  ac3_parser.d  ac3dec_data.d  ac3dec_fixed.d  ac3dec_float.d  ac3dsp.d  ac3enc.d  ac3enc_fixed.d  ac3enc_float.d  ac3tab.d  acelp_filters.d  acelp_pitch_delay.d  adpcm.d  (+698 more)
MPlayer-1.4/libaf/: af_lavcac3enc.d  af_lavcresample.d
MPlayer-1.4/libmpcodecs/: ad_ffmpeg.d  ad_spdif.d  vd_ffmpeg.d  vf_fspp.d  vf_geq.d  vf_lavc.d  vf_qp.d  vf_screenshot.d  vf_spp.d  vf_uspp.d
MPlayer-1.4/libmpdemux/: demux_lavf.d  demuxer.d  mp_taglists.d
MPlayer-1.4/libvo/: vo_png.d
MPlayer-1.4/stream/: stream_ffmpeg.d
MPlayer-1.4/sub/: av_sub.d  font_load.d
rcore-port/: CMakeLists.txt  common.cmake
rcore-port/cmake/: common.cmake  compile-flags.cmake
rcore-port/src/: main.1.c  main.c
root/boot/: System.map-vanilla  config-vanilla  extlinux.conf  ldlinux.sys  libcom32.c32
root/proc/: keys  kmsg
root/root/: .ash_history  .viminfo
zlib-1.2.11/: adler32.lo  compress.lo  crc32.lo  deflate.lo  example64  examplesh  gzclose.lo  gzlib.lo  gzread.lo  gzwrite.lo  infback.lo  inffast.lo  inflate.lo  inftrees.lo  libz.so.1.2.11  minigzip  minigzipsh  trees.lo  uncompr.lo  zutil.lo
(+600 files in other folders)
